# String-algorithms-in-C

./: .gitignore  CMakeLists.txt  README.md
Chapter-01-Strings-in-C/: CMakeLists.txt  test_test.c
test/: CMakeLists.txt  utest.h
